--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
