--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_URL='mongodb://localhost:27017/nest'
 SALT_OR_ROUND=10
 SUPER_ADMIN_KEY="secrect_super_admin_key"
 REFRESH_TOKEN="REFRESH_TOKEN"
+
+REDIS_HOST="localhost"
+REDIS_PORT="6379"
