--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@socket.io/redis-adapter": "^7.2.0",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -30,7 +31,10 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/platform-ws": "^9.2.1",
     "@nestjs/swagger": "^6.1.4",
+    "@nestjs/websockets": "^9.2.1",
     "@types/bull": "^4.10.0",
     "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
@@ -44,9 +48,11 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.4",
     "uuid": "^9.0.0",
     "webpack": "^5.75.0"
   },
